--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   freezed: ^2.4.1
   json_serializable: ^6.6.2
   json_annotation: ^4.8.1
+  dartz: ^0.10.1
+  sealed_unions: ^3.0.3+1
 
 dev_dependencies:
   flutter_test:
