--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   json_annotation: ^4.8.1
   dartz: ^0.10.1
   sealed_unions: ^3.0.3+1
+  dio: ^5.3.2
+  kt_dart: ^1.1.0
+  logger: ^2.0.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
