--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluro: ^2.0.5
-  clip_shadow: ^0.2.1
   freezed_annotation: ^2.4.1
   build_runner: ^2.3.3
   freezed: ^2.4.1
@@ -48,6 +47,8 @@ dependencies:
   kt_dart: ^1.1.0
   logger: ^2.0.1
   flutter_bloc: ^8.1.3
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.8.5
 
 dev_dependencies:
   flutter_test:
