--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   firebase_core: ^2.15.1
   cloud_firestore: ^4.8.5
+  audioplayers: ^5.1.0
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
